--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
+    "react-player": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-spring": "^9.7.3",
     "remixicon": "^4.2.0"
