--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.14",
+    "@react-spring/parallax": "^9.7.3",
+    "parallax-controller": "^1.7.1",
     "react": "^18.2.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.0.1",
     "react-player": "^2.15.1",
+    "react-plx": "^2.1.2",
     "react-router-dom": "^6.22.3",
     "react-spring": "^9.7.3",
     "remixicon": "^4.2.0"
